# stylometrist

./: .gitignore  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.___py
doc/source/: api.rst  api_common.rst  api_decorators.rst  api_sentence_length.rst  api_vocabulary_richness.rst  conf.py  index.rst
src/stylib/: classic_measurements.py  common.py  decorators.py  sentence_length.py  textual_measurements.py  vocabulary_richness.py  word_length.py
src/stylometrist/: common.py  config.py  decorators.py  sentence_length.py  vocabulary_richness.py  word_length.py
tests/stylib/: test_classic_meaurements.py  test_common.py  test_config.py  test_sentence_length.py  test_textual_meaurements.py  test_word_length.py
tests/stylometrist/: test_common.py  test_config.py  test_sentence_length.py  test_word_length.py
