[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stylometrist"
version = "0.0.1"
authors = [
  { name="Noah Krieger", email="author@example.com" },
]
description = "A collection of stylometry algorithms"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/noahkrieger/stylometrist"
"Bug Tracker" = "https://github.com/noahkrieger/stylometrist/issues"


[tool.pytest.ini_options]
pythonpath = [
  ".", "src/stylometrist"
]